@@ -56,6 +56,8 @@ Version 1.4.22 - SVN
     extensive effort helping diagnose)
   - New Mail plugin no longer removes normal organization title when
     putting the number of new messages in the browser title
+  - Added clickjacking protection (thanks to Asbjorn Thorsen and Geir
+    Hansen for bringing this to our attention). [CVE-2010-4554]
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
